# axum_assessment_json_response

./: .gitignore  Cargo.toml  README.md  check.out  check.sh  favorite_languages.json
src/: lib.rs  main.rs
src/router/: favorite_languages.rs  mod.rs
tests/: assessment.rs
