[package]
name = "json_response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
